# Aquarium-Assitant-Goldie

./: .gitignore  BUILD_FLASH_GUIDE.md  CALENDAR_REDESIGN_PLAN.md  CMakeLists.txt  DASHBOARD_README.md  GEMINI_AI_SETUP.md  MOOD_SYSTEM.md  README.md  SCROLLING_GUIDE.md  SD_CARD_SETUP.md  SPIFFS_IMAGE_SETUP.md  STABILIZATION_FIXES.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/esp_port/: esp_3inch5_lcd_port.cpp
components/lvgl_ui/: CMakeLists.txt  dashboard.cpp  dashboard.h
components/lvgl_ui/images/: README_ANIMATION.md
components/task_coordinator/: CMakeLists.txt  messages.h  task_coordinator.cpp  task_coordinator.h
main/: CMakeLists.txt  blynk_config.h  blynk_integration.cpp  blynk_integration.h  gemini_api.cpp  gemini_api.h  main.cpp  wifi_config.h
spiffs_image/lvgl_ui/images/: .gitkeep
tools/: c_to_bin.py  png_to_c.py
